# Jam-PT

./: .gitignore  CMakeLists.txt  README.md
src/: AudioFilePlayer.cpp  AudioFilePlayer.h  CoreMLProcessor.h  CoreMLProcessor.mm  DemucsProcessor.h  DemucsProcessor.mm  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
